login page, fetch and state logic

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+*,
+/* general styles */
+
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* login page */
+
+.login {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login-nav {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-container {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 5rem;
 }
+
+.login-nav h3 {
+  font-size: 2rem;
+}
+
+.login-form {
+  display: flex;
+  width: 80rem;
+  align-items: center;
+  height: 100%;
+  justify-content: space-around;
+}
+
+.signup {
+  display: flex;
+  width: 100%;
+}
+
+.signup-banner {
+  width: 50%;
+}
+
+.signup-form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Footer */
+
+footer {
+  text-align: center;
+  width: 100%;
+  height: 5rem;
+  font-size: 2rem;
+}
+
+/* animations */
+
+/* media queries */
